# Nobius

./: .gitignore  404.html  AGENTS.md  CLAUDE.md  README.md  SetPDF.py  cli_common.py  export_mobius_batch.py  export_pdf.py  generateAll.py  generateGroup.py  generateGroup_exam.py  generateHTMLpreview.py  generateJSON.py  generateMoodleXML.py  generatePDFfromJSON.py  import_mobius.py  import_report.py  index.html  local_preview.json  mkdocs.yml  nobius.json  nobius_config.py  pdf_content.py  pdf_html.py  pdf_latex.py  pdf_tex.py  precheck.py  preview_html.py  pyproject.toml  render_common.py  requirements.txt  ruff.toml
.github/workflows/: ci.yml
About/features/: index.html
AddonsAndFeatures/FutureAdditions/: index.html
CustomizationAndResources/AgentGuidance/: index.html
CustomizationAndResources/Configuration/: index.html
CustomizationAndResources/CourseModulePackage/: index.html
CustomizationAndResources/QuestionJavascript/: index.html
SheetFiles/Parts/: index.html
docs/: index.md  quickstart.md
quickstart/: index.html
resources/: Nobius4.mla  QuestionJavaScript.txt
scripts/: repl.py
search/: search_index.json
templates/: makeQuestion.xml  makeQuestion_exam.xml  master_exam.xml  questionText_exam.html
tests/: conftest.py  test_batch.py  test_config.py  test_import.py  test_moodle_xml.py  test_new_question_types.py  test_pdf.py  test_pdf_latex.py  test_precheck.py  test_preview_html.py  test_render.py  test_report.py  test_xml_scraper.py
validation/: __init__.py  validation.py
xml_scraper/: __init__.py  get_html_data.py  get_xml_data.py
(+129 files in other folders)
