[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "nobius"
version = "0.1.0"
description = "Utilities for authoring and exporting Mobius assessment content from local JSON source files"
requires-python = ">=3.11"
dependencies = [
    "attrs",
    "beautifulsoup4",
    "Jinja2",
    "jsonschema",
    "lxml",
    "MarkupSafe",
    "pypdf>=6.0",
    "pyperclip",
    "pyrsistent",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "mkdocs-material",
]

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = ["E9", "E71", "E72", "E73", "E74", "F"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["F401"]
